Added meta tag to make mobile view responsive.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- To make a bootstrap styled website to be responsive on movile this meta tag needs to be added in head element above title tag -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Maya.com</title>
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
